~ [cc] another perf review and docs archiving